Scrape stations(ab,sk,mb) (#32)
created ScrapeStations and ImportErgot script

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -59,11 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir('/data')\n",
-    "load_dotenv('docker/.env')\n",
-    "PGUSER = os.getenv('POSTGRES_USER')\n",
-    "PGPW = os.getenv('POSTGRES_PW')\n",
-    "PGDB = os.getenv('POSTGRES_DB')"
+    "\n",
+    "load_dotenv()\n",
+    "PG_USER = os.getenv('POSTGRES_USER')\n",
+    "PG_PW = os.getenv('POSTGRES_PW')\n",
+    "PG_DB = os.getenv('POSTGRES_DB')\n",
+    "PG_ADDR = os.getenv('POSTGRES_ADDR')\n",
+    "PG_PORT = os.getenv('POSTGRES_PORT')"
    ]
   },
   {
@@ -620,15 +622,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pushGdfToPostGresDB(tableName: str, geodf: gpd.GeoDataFrame, db: str, user: str, pw: str) -> None:\n",
+    "def pushGdfToPostGresDB(tableName: str, geodf: gpd.GeoDataFrame, db: str, addr: str, port: int, user: str, pw: str) -> None:\n",
     "    import geopandas as gpd\n",
-    "    from DataService import DataService\n",
     "    \n",
-    "    db_service = DataService(db, user, pw)\n",
+    "    sys.path.append('../')\n",
+    "    from DataService import DataService\n",
+    "\n",
+    "    \n",
+    "    db_service = DataService(db, addr, port, user, pw)\n",
     "    db_con = db_service.connect()\n",
     "\n",
     "    geodf.to_postgis(tableName, db_con, index=False, if_exists='replace')\n",
     "    db_service.cleanup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16528402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "gdfProjected.rename(columns={gdfProjected.columns[0]: \"car_uid\"}, inplace=True)\n",
+    "gdfProjected.rename(columns={gdfProjected.columns[1]: \"car_name\"}, inplace=True)\n",
+    "gdfProjected.rename(columns={gdfProjected.columns[2]: \"pr_uid\"}, inplace=True)\n",
+    "gdfProjected.rename(columns={gdfProjected.columns[3]: \"ag_uid\"}, inplace=True)\n",
+    "\n",
+    "\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[0]: \"station_name\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[1]: \"province\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[2]: \"latitude\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[3]: \"longitude\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[4]: \"elevation\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[5]: \"station_id\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[6]: \"wmo_identifier\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[7]: \"tc_identifier\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[8]: \"first_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[9]: \"last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[10]: \"hly_first_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[11]: \"hly_last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[12]: \"dly_first_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[13]: \"dly_last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[14]: \"mly_first_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[15]: \"mly_last_year\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[16]: \"geometry\"}, inplace=True)\n",
+    "gdfStationsDly.rename(columns={gdfStationsDly.columns[17]: \"cr_num\"}, inplace=True)\n",
+    "\n",
+    "gdfStationsDly.loc[gdfStationsDly['province'] == 'ALBERTA', 'province'] = 'AB'\n",
+    "gdfStationsDly.loc[gdfStationsDly['province'] == 'MANITOBA', 'province'] = 'MB'\n",
+    "gdfStationsDly.loc[gdfStationsDly['province'] == 'SASKATCHEWAN', 'province'] = 'SK'\n",
+    "\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[0]: \"station_name\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[1]: \"province\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[2]: \"latitude\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[3]: \"longitude\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[4]: \"elevation\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[5]: \"station_id\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[6]: \"wmo_identifier\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[7]: \"tc_identifier\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[8]: \"first_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[9]: \"last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[10]: \"hly_first_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[11]: \"hly_last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[12]: \"dly_first_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[13]: \"dly_last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[14]: \"mly_first_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[15]: \"mly_last_year\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[16]: \"geometry\"}, inplace=True)\n",
+    "gdfStationsHly.rename(columns={gdfStationsHly.columns[17]: \"cr_num\"}, inplace=True)\n",
+    "\n",
+    "gdfStationsHly.loc[gdfStationsHly['province'] == 'ALBERTA', 'province'] = 'AB'\n",
+    "gdfStationsHly.loc[gdfStationsHly['province'] == 'MANITOBA', 'province'] = 'MB'\n",
+    "gdfStationsHly.loc[gdfStationsHly['province'] == 'SASKATCHEWAN', 'province'] = 'SK'"
    ]
   },
   {
@@ -648,14 +714,14 @@
    "source": [
     "### push dataframes to postgres\n",
     "\n",
-    "tblName = 'CensusAgRegions'\n",
-    "pushGdfToPostGresDB(tblName, gdfProjected, PGDB, PGUSER, PGPW)\n",
+    "tblName = 'census_ag_regions'\n",
+    "pushGdfToPostGresDB(tblName, gdfProjected, PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
     "\n",
-    "tblName = 'StationsDly'\n",
-    "pushGdfToPostGresDB(tblName, gdfStationsDly, PGDB, PGUSER, PGPW)\n",
+    "tblName = 'stations_dly'\n",
+    "pushGdfToPostGresDB(tblName, gdfStationsDly, PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
     "\n",
-    "tblName = 'StationsHly'\n",
-    "pushGdfToPostGresDB(tblName, gdfStationsHly, PGDB, PGUSER, PGPW)\n"
+    "tblName = 'stations_hly'\n",
+    "pushGdfToPostGresDB(tblName, gdfStationsHly, PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)"
    ]
   },
   {
@@ -683,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   },
   "vscode": {
    "interpreter": {
