--- a/src/WeatherStation/Scrape-MB-weather-station-data.ipynb
+++ b/src/WeatherStation/Scrape-MB-weather-station-data.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/dist-packages/geopandas/_compat.py:124: UserWarning: The Shapely GEOS version (3.11.1-CAPI-1.17.1) is incompatible with the GEOS version PyGEOS was compiled with (3.10.4-CAPI-1.16.2). Conversions between both will be slow.\n",
-      "  warnings.warn(\n",
-      "/tmp/ipykernel_31254/1399629943.py:6: DeprecationWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas still uses PyGEOS by default. However, starting with version 0.14, the default will switch to Shapely. To force to use Shapely 2.0 now, you can either uninstall PyGEOS or set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
-      "\n",
-      "import os\n",
-      "os.environ['USE_PYGEOS'] = '0'\n",
-      "import geopandas\n",
-      "\n",
-      "In the next release, GeoPandas will switch to using Shapely by default, even if PyGEOS is installed. If you only have PyGEOS installed to get speed-ups, this switch should be smooth. However, if you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
-      "  import geopandas as gpd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Import relevant modules\n",
     "import os\n",
@@ -32,14 +15,15 @@
     "from matplotlib import pyplot as plt\n",
     "from IPython.display import clear_output\n",
     "from dotenv import load_dotenv\n",
-    "from DataService import DataService\n",
     "from ClimateDataRequester import ClimateDataRequester as cdr\n",
-    "from utils import *"
+    "\n",
+    "sys.path.append('../')\n",
+    "from DataService import DataService"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +35,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('/data')\n",
+    "load_dotenv('docker/.env')\n",
+    "PG_USER = os.getenv('POSTGRES_USER')\n",
+    "PG_PW = os.getenv('POSTGRES_PW')\n",
+    "PG_DB = os.getenv('POSTGRES_DB')\n",
+    "PG_ADDR = os.getenv('POSTGRES_ADDR')\n",
+    "PG_PORT = os.getenv('POSTGRES_PORT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def push_data(df: pd.DataFrame) -> None:\n",
-    "    dataService = DataService(PGDB, PGUSER, PGPW)\n",
+    "    dataService = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
     "    db_con = dataService.connect()\n",
     "    df.to_sql(\"WeatherData\", db_con, if_exists=\"append\", index=False)\n",
     "    dataService.cleanup()\n"
@@ -64,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dataProcessA(df: pd.DataFrame, stationID: str) -> None:\n",
-    "    dataService = DataService(PGDB, PGUSER, PGPW)\n",
+    "    dataService = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
     "    db_con = dataService.connect()\n",
     "    try:\n",
     "        df.drop(columns=['Data Quality', 'Max Temp Flag', 'Mean Temp Flag', 'Min Temp Flag', 'Heat Deg Days Flag', 'Cool Deg Days Flag', 'Spd of Max Gust (km/h)',\n",
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,14 +128,14 @@
     "query = \"SELECT * FROM \" + tableName + \";\"\n",
     "\n",
     "\n",
-    "dataService = DataService(PGDB, PGUSER, PGPW)\n",
+    "dataService = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
     "db_con = dataService.connect()\n",
     "dfStations = gpd.GeoDataFrame.from_postgis(query, db_con, geom_col='geometry')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,111 +161,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Station Name      80\n",
-       "Province          80\n",
-       "Latitude          80\n",
-       "Longitude         80\n",
-       "Elevation         80\n",
-       "Climate ID        80\n",
-       "WMO Identifier    61\n",
-       "TC Identifier     75\n",
-       "First Year        80\n",
-       "Last Year         80\n",
-       "HLY First Year    80\n",
-       "HLY Last Year     80\n",
-       "DLY First Year    80\n",
-       "DLY Last Year     80\n",
-       "MLY First Year    54\n",
-       "MLY Last Year     54\n",
-       "geometry          80\n",
-       "CRnum             80\n",
-       "scraped           80\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mbStations.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Longitude (x)  Latitude (y)        Station Name  Climate ID   Date/Time   \n",
-      "0          -97.1          49.9  WINNIPEG THE FORKS     5023262  2022-12-01  \\\n",
-      "1          -97.1          49.9  WINNIPEG THE FORKS     5023262  2022-12-02   \n",
-      "2          -97.1          49.9  WINNIPEG THE FORKS     5023262  2022-12-03   \n",
-      "3          -97.1          49.9  WINNIPEG THE FORKS     5023262  2022-12-04   \n",
-      "4          -97.1          49.9  WINNIPEG THE FORKS     5023262  2022-12-05   \n",
-      "\n",
-      "   Year  Month  Day  Data Quality  Max Temp (°C) Max Temp Flag  Min Temp (°C)   \n",
-      "0  2022     12    1           NaN           -6.9           NaN          -16.2  \\\n",
-      "1  2022     12    2           NaN           -7.1           NaN          -19.5   \n",
-      "2  2022     12    3           NaN          -13.4           NaN          -21.1   \n",
-      "3  2022     12    4           NaN           -3.4           NaN          -15.4   \n",
-      "4  2022     12    5           NaN           -5.4           NaN          -23.9   \n",
-      "\n",
-      "  Min Temp Flag  Mean Temp (°C) Mean Temp Flag  Heat Deg Days (°C)   \n",
-      "0           NaN           -11.6            NaN                29.6  \\\n",
-      "1           NaN           -13.3            NaN                31.3   \n",
-      "2           NaN           -17.2            NaN                35.2   \n",
-      "3           NaN            -9.4            NaN                27.4   \n",
-      "4           NaN           -14.6            NaN                32.6   \n",
-      "\n",
-      "  Heat Deg Days Flag  Cool Deg Days (°C) Cool Deg Days Flag  Total Rain (mm)   \n",
-      "0                NaN                 0.0                NaN              NaN  \\\n",
-      "1                NaN                 0.0                NaN              NaN   \n",
-      "2                NaN                 0.0                NaN              NaN   \n",
-      "3                NaN                 0.0                NaN              NaN   \n",
-      "4                NaN                 0.0                NaN              NaN   \n",
-      "\n",
-      "  Total Rain Flag  Total Snow (cm) Total Snow Flag  Total Precip (mm)   \n",
-      "0             NaN              NaN             NaN                0.0  \\\n",
-      "1             NaN              NaN             NaN                0.0   \n",
-      "2             NaN              NaN             NaN                0.6   \n",
-      "3             NaN              NaN             NaN                3.2   \n",
-      "4             NaN              NaN             NaN                1.6   \n",
-      "\n",
-      "  Total Precip Flag  Snow on Grnd (cm) Snow on Grnd Flag   \n",
-      "0               NaN                NaN               NaN  \\\n",
-      "1               NaN                NaN               NaN   \n",
-      "2               NaN                NaN               NaN   \n",
-      "3               NaN                NaN               NaN   \n",
-      "4               NaN                NaN               NaN   \n",
-      "\n",
-      "   Dir of Max Gust (10s deg) Dir of Max Gust Flag Spd of Max Gust (km/h)   \n",
-      "0                        NaN                  NaN                    NaN  \\\n",
-      "1                       33.0                  NaN                   38.0   \n",
-      "2                        NaN                  NaN                    NaN   \n",
-      "3                        NaN                  NaN                    NaN   \n",
-      "4                        NaN                  NaN                    NaN   \n",
-      "\n",
-      "  Spd of Max Gust Flag  \n",
-      "0                  NaN  \n",
-      "1                  NaN  \n",
-      "2                  NaN  \n",
-      "3                  NaN  \n",
-      "4                  NaN  \n",
-      "Processed row 80 of 80\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "requester = cdr()\n",
     "df = pd.DataFrame()\n",
@@ -305,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
