--- a/src/SateliteData/pullSateliteData.ipynb
+++ b/src/SateliteData/pullSateliteData.ipynb
@@ -100,9 +100,10 @@
     "    datetime = datetime = np.datetime64(f'{year}-{month}-{day}T{hour}')\n",
     "    query = sq.text(queryHandler.createRowExistsInDBReq(lon, lat, datetime))\n",
     "    rowExists = queryHandler.readRowExistsInDB(db.execute(query))\n",
+    "    hour = int(hour.split(':')[0])\n",
     "    \n",
     "    if rowExists:\n",
-    "        query = sq.text(queryHandler.createUpdateRowReq(attr, value))\n",
+    "        query = sq.text(queryHandler.createUpdateRowReq(lon, lat, datetime, attr, value))\n",
     "        db.execute(query)\n",
     "    else:\n",
     "        query = sq.text(queryHandler.createInsertRowReq(lon, lat, datetime, year, month, day, hour, region, attr, value))\n",
