fixed bug where data/coords were being returned as 2D arrays

--- a/src/SateliteData/pullSateliteData.ipynb
+++ b/src/SateliteData/pullSateliteData.ipynb
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 474,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys, cdsapi, pygrib, calendar\n",
     "from QueryHandler import QueryHandler\n",
@@ -51,16 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [],
    "source": [
-    "queryHandler = QueryHandler()"
+    "c = cdsapi.Client()\n",
+    "queryHandler = QueryHandler()\n",
+    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,30 +63,30 @@
     "    tableExists = queryHandler.readTableExists(db.execute(query))\n",
     "    \n",
     "    if not tableExists:\n",
-    "        query = sq.text(queryHandler.createCopernicusTableReq('copernicus_satelite_data'))\n",
+    "        query = sq.text(queryHandler.createCopernicusTableReq())\n",
     "        db.execute(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcAgRegion(agRegions, point):\n",
-    "    region = None\n",
+    "def calcAgRegion(agRegions: gpd.GeoDataFrame, point: Point) -> str:\n",
+    "    area = ''\n",
     "\n",
     "    for index, region in agRegions.iterrows():\n",
-    "        if region['geomtry'].contains(point):\n",
-    "            region = region['car_name']\n",
+    "        if region['geometry'].contains(point)[0]:\n",
+    "            area = region['car_name']\n",
     "            break\n",
     "    \n",
-    "    return region"
+    "    return area"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,31 +106,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def processFile(grbs, db, agRegions, year, month, day, hour, attr):\n",
-    "    data, lats, lons = grbs[1].data()\n",
+    "def processFile(grbs, db, agRegions: gpd.GeoDataFrame, year, month, day, hour, attr):\n",
+    "    listOfdata, listOfLats, listOfLons = grbs[1].data()\n",
     "\n",
-    "    for index, value in enumerate(data):\n",
-    "        point = Point(lons[index], lats[index])\n",
-    "            \n",
-    "        if agRegions.contains(point):\n",
+    "    for listIndex, list in enumerate(listOfdata):\n",
+    "        for dataIndex, data in enumerate(list):\n",
+    "            x = listOfLons[listIndex][dataIndex]\n",
+    "            y = listOfLats[listIndex][dataIndex]\n",
+    "\n",
+    "            point = Point(x, y)\n",
+    "            point = gpd.GeoSeries(point, crs='EPSG:4326') \n",
     "            region = calcAgRegion(agRegions, point)\n",
-    "            storeData(db, lons[index], lats[index], year, month, day, hour, region, attr, value)"
+    "\n",
+    "        if region:\n",
+    "            print('about to store in db')\n",
+    "            storeData(db, x, y, year, month, day, hour, region, attr, data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loadGeometry(conn):\n",
+    "def loadGeometry(conn) -> gpd.GeoDataFrame:\n",
     "    query = sq.text('select car_name, geometry FROM public.census_ag_regions')\n",
-    "    agRegions = gpd.read_postgis(query, conn, geom_col='geometry')\n",
-    "    agRegions.set_crs(\"EPSG:4326\", allow_override=True)\n",
+    "    agRegions = gpd.GeoDataFrame.from_postgis(query, conn, geom_col='geometry') # crs='EPSG:3347'\n",
+    "    agRegions = agRegions.set_crs(\"EPSG:3347\", allow_override=True)\n",
+    "    agRegions = agRegions.to_crs(\"EPSG:4326\")\n",
     "\n",
     "    return agRegions\n",
     "    "
@@ -144,33 +145,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 481,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pulling data for 1995 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-11 22:16:06,666 INFO Welcome to the CDS\n",
+      "2023-06-11 22:16:06,668 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-land\n",
+      "2023-06-11 22:16:06,857 INFO Request is queued\n",
+      "2023-06-11 22:16:08,003 INFO Request is running\n",
+      "2023-06-11 22:16:09,651 INFO Request is completed\n",
+      "2023-06-11 22:16:09,653 INFO Downloading https://download-0014-clone.copernicus-climate.eu/cache-compute-0014/cache/data9/adaptor.mars.internal-1686521766.93957-7263-7-b2e27730-c39c-44c7-a520-b3cdd58f590d.grib to download.grib (96K)\n",
+      "2023-06-11 22:16:10,803 INFO Download rate 83.6K/s  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing file\n"
+     ]
+    }
+   ],
    "source": [
-    "c = cdsapi.Client()\n",
     "years = [str(year) for year in range(MIN_YEAR, MAX_YEAR + 1)]\n",
     "months = [str(month) for month in range(MIN_MONTH, MAX_MONTH + 1)]\n",
+    "\n",
     "attrs = [\n",
     "    '2m_dewpoint_temperature', '2m_temperature', 'evaporation_from_bare_soil', 'skin_reservoir_content', 'skin_temperature',\n",
     "    'snowmelt', 'soil_temperature_level_1', 'soil_temperature_level_2', 'soil_temperature_level_3', 'soil_temperature_level_4',\n",
     "    'surface_net_solar_radiation', 'surface_pressure', 'volumetric_soil_water_layer_1', 'volumetric_soil_water_layer_2', \n",
     "    'volumetric_soil_water_layer_3', 'volumetric_soil_water_layer_4'\n",
     "]\n",
+    "\n",
     "hours = [\n",
     "    '00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00','12:00', '13:00', \n",
     "    '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00'\n",
     "]\n",
     "\n",
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "\n",
     "conn = db.connect()\n",
     "\n",
     "createTable(db)\n",
-    "agRegions, Canada = loadGeometry(conn)\n",
+    "agRegions = loadGeometry(conn)\n",
     "\n",
     "for year in years:\n",
+    "    print(f'Pulling data for {year} ...')\n",
+    "\n",
     "    for month in months:\n",
-    "        numDays = calendar.monthrange(year, month)[1]\n",
+    "        numDays = calendar.monthrange(int(year), int(month))[1]\n",
     "        days = [str(day) for day in range(1, numDays + 1)]\n",
     "\n",
     "        for day in days:\n",
@@ -185,84 +217,20 @@
     "                            'month': month,\n",
     "                            'day': [day],\n",
     "                            'time': [hour],\n",
-    "                            'area': [61, -140, 48, -88],\n",
+    "                            'area': [61, -125, 48, -88],\n",
     "                        },\n",
     "                        'download.grib'\n",
     "                    )\n",
     "\n",
+    "                    if attr == '2m_dewpoint_temperature' or attr == '2m_temperature':\n",
+    "                        attr = attr[3:]\n",
+    "\n",
     "                    # read the file, process it, delete it then go onto the next set of data\n",
     "                    grbs = pygrib.open('download.grib')\n",
     "                    processFile(grbs, db, agRegions, year, month, day, hour, attr)\n",
-    "                    os.remove('download.grib')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(grbs[1].latlons())\n",
-    "# lats, lons = grbs[1].latlons()\n",
-    "# print(lats[0][0])\n",
-    "# print(lons[0][0])\n",
-    "# for lat in lats:\n",
-    "#     for lon in lons:\n",
-    "#         print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "891\n",
-      "891\n",
-      "891\n"
-     ]
-    }
-   ],
-   "source": [
-    "# data, lat, lon = grbs[1].data()\n",
-    "# print(len(data[2]))\n",
-    "# print(len(lat[2]))\n",
-    "# print(len(lon[2]))\n",
-    "# data, lat, lon = grbs[2].data(lat1=70,lon1=-142)\n",
-    "# print(lat)\n",
+    "                    os.remove('download.grib')\n",
     "\n",
-    "\n",
-    "#print(grbs[5].values)\n",
-    "#print(grbs[5].data(lat1=70,lon1=-142))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# local_data,lats,lons = grb.data(lat1=y1,lat2=y2,lon1=x1,lon2=x2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grbs= pygrib.open(\"download.grib\")\n",
-    "\n",
-    "# num = 0\n",
-    "# for n in grbs:\n",
-    "#     print(n.latlons())\n",
-    "#     print(n)\n",
-    "#     num += 1\n",
-    "\n",
-    "# print(num)"
+    "print('[SUCCESS] data pulled successfully')"
    ]
   }
  ],
