--- a/src/SateliteData/pullSateliteData.ipynb
+++ b/src/SateliteData/pullSateliteData.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def storeData(db, lon, lat, year, month, day, hour, region, attr, value):\n",
-    "    datetime = datetime = np.datetime64(f'{year}-{month}-{day}T{hour}')\n",
+    "    datetime = np.datetime64(f'{year}-{month}-{day}T{hour}')\n",
     "    query = sq.text(queryHandler.createRowExistsInDBReq(lon, lat, datetime))\n",
     "    rowExists = queryHandler.readRowExistsInDB(db.execute(query))\n",
     "    hour = int(hour.split(':')[0])\n",
-    "    \n",
+    "\n",
     "    if rowExists:\n",
     "        query = sq.text(queryHandler.createUpdateRowReq(lon, lat, datetime, attr, value))\n",
     "        db.execute(query)\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,14 +122,22 @@
     "            point = gpd.GeoSeries(point, crs='EPSG:4326') \n",
     "            region = calcAgRegion(agRegions, point)\n",
     "\n",
-    "        if region:\n",
-    "            print('about to store in db')\n",
-    "            storeData(db, x, y, year, month, day, hour, region, attr, data)"
+    "            if region:\n",
+    "                if(len(month) != 2):        # format the month to satisfy np.datetime64\n",
+    "                    month = '0' + month\n",
+    "\n",
+    "                if(len(day) != 2):          # format the day to satisfy np.datetime64\n",
+    "                    day = '0' + day\n",
+    "\n",
+    "                if(np.ma.is_masked(data)):\n",
+    "                    data = 'NULL'\n",
+    "\n",
+    "                storeData(db, x, y, year, month, day, hour, region, attr, data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,37 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pulling data for 1995 ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-06-11 22:16:06,666 INFO Welcome to the CDS\n",
-      "2023-06-11 22:16:06,668 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-land\n",
-      "2023-06-11 22:16:06,857 INFO Request is queued\n",
-      "2023-06-11 22:16:08,003 INFO Request is running\n",
-      "2023-06-11 22:16:09,651 INFO Request is completed\n",
-      "2023-06-11 22:16:09,653 INFO Downloading https://download-0014-clone.copernicus-climate.eu/cache-compute-0014/cache/data9/adaptor.mars.internal-1686521766.93957-7263-7-b2e27730-c39c-44c7-a520-b3cdd58f590d.grib to download.grib (96K)\n",
-      "2023-06-11 22:16:10,803 INFO Download rate 83.6K/s  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "processing file\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "years = [str(year) for year in range(MIN_YEAR, MAX_YEAR + 1)]\n",
     "months = [str(month) for month in range(MIN_MONTH, MAX_MONTH + 1)]\n",
@@ -230,7 +210,8 @@
     "                    processFile(grbs, db, agRegions, year, month, day, hour, attr)\n",
     "                    os.remove('download.grib')\n",
     "\n",
-    "print('[SUCCESS] data pulled successfully')"
+    "print('[SUCCESS] data pulled successfully')\n",
+    "db.cleanup()"
    ]
   }
  ],
